--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 10 2025 05:33:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 10 2025 09:01:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66b30969ebcbac87918c28c4" data-wf-site="66b30968ebcbac87918c270a">
 <head>
   <meta charset="utf-8">
@@ -2012,5 +2012,20 @@ margin: 0rem !important;
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66b30968ebcbac87918c270a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script>
+  var appleButtons = document.querySelectorAll('[download-button="apple"]');
+  var androidButtons = document.querySelectorAll('[download-button="android"]');
+  androidButtons.forEach(button => button.style.display = "none");
+  appleButtons.forEach(button => button.style.display = "none");
+  var md = new MobileDetect(window.navigator.userAgent);
+  if (md.os() === "iOS") {
+    appleButtons.forEach(button => button.style.display = "flex");
+  } else if (md.os() === "AndroidOS") {
+    androidButtons.forEach(button => button.style.display = "flex");
+  } else {
+    appleButtons.forEach(button => button.style.display = "flex");
+    androidButtons.forEach(button => button.style.display = "flex");
+  }
+</script>
 </body>
 </html>
