--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 13:46:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 13:49:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67ceebf4dfa35434e0d6180d" data-wf-site="66b30968ebcbac87918c270a">
 <head>
   <meta charset="utf-8">
@@ -350,7 +350,7 @@ margin: 0rem !important;
           <a href="#" class="navbar3_link w-nav-link">探索用戶</a>
           <div class="spacer-small"></div>
           <div class="button-group hide-desktop">
-            <a href="#" class="button is-small is-nav w-button">Download</a>
+            <a href="#" class="button is-small is-nav w-button">立即下載</a>
           </div>
         </nav>
         <a href="#" class="navbar3_logo-link w-nav-brand"><img src="images/sparkyl.avif" loading="lazy" alt="" class="navbar3_logo"></a>
@@ -441,8 +441,8 @@ margin: 0rem !important;
                 <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
               </div>
               <div class="w-layout-grid footer8_legal-list">
-                <a href="privacy-policy.html" target="_blank" class="footer8_legal-link">Privacy Policy</a>
-                <a href="https://www.mediastudio.hk/" target="_blank" class="footer8_legal-link">Terms &amp; Conditions</a>
+                <a href="privacy-policy.html" class="footer8_legal-link">Privacy Policy</a>
+                <a href="terms-conditions.html" aria-current="page" class="footer8_legal-link w--current">Terms &amp; Conditions</a>
                 <a href="https://www.mediastudio.hk/" target="_blank" class="footer8_legal-link">Designed by Media Studio</a>
               </div>
             </div>
