--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 13:49:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 13:51:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66b30969ebcbac87918c28c4" data-wf-site="66b30968ebcbac87918c270a">
 <head>
   <meta charset="utf-8">
@@ -345,7 +345,7 @@ margin: 0rem !important;
           </div>
         </div>
         <nav role="navigation" class="navbar3_menu w-nav-menu">
-          <a href="index.html" aria-current="page" class="navbar3_logo-link-menu w-nav-brand w--current"><img src="images/sparkyl.avif" loading="eager" sizes="(max-width: 1944px) 100vw, 1944px" srcset="images/sparkyl-p-500.png 500w, images/sparkyl-p-800.png 800w, images/sparkyl.avif 1944w" alt="" class="navbar3_logo"></a>
+          <a href="index.html" aria-current="page" class="navbar3_logo-link-menu w-nav-brand w--current"><img src="images/sparkyl.avif" loading="eager" sizes="100vw" srcset="images/sparkyl-p-500.png 500w, images/sparkyl-p-800.png 800w, images/sparkyl.avif 1944w" alt="" class="navbar3_logo"></a>
           <a href="index.html" aria-current="page" class="navbar3_link w-nav-link w--current">app功能</a>
           <a href="#reviews" class="navbar3_link w-nav-link">用戶評價</a>
           <a href="#about" class="navbar3_link w-nav-link">探索用戶</a>
@@ -354,7 +354,7 @@ margin: 0rem !important;
             <a href="#cta" class="button is-small is-nav w-button">立即下載</a>
           </div>
         </nav>
-        <a href="#" class="navbar3_logo-link w-nav-brand"><img src="images/sparkyl.avif" loading="lazy" alt="" class="navbar3_logo"></a>
+        <a href="index.html" aria-current="page" class="navbar3_logo-link w-nav-brand w--current"><img src="images/sparkyl.avif" loading="lazy" alt="" class="navbar3_logo"></a>
         <div class="navbar3_menu-background"></div>
         <div id="w-node-_624c3845-24c6-eace-07dd-cc9b843387c6-843387af" class="button-group is-center">
           <a href="#cta" class="button is-small hide-mobile-portrait w-button">立即下載</a>
@@ -802,7 +802,7 @@ margin: 0rem !important;
                   </div>
                 </div>
                 <div id="w-node-_286e2206-f72c-f155-ab3b-dfd3aebba197-918c28c4" class="layout487_image-wrapper">
-                  <div class="layout487_image-inner"><img sizes="(max-width: 1242px) 100vw, 1242px" srcset="images/unnamed_1unnamed.avif 500w, images/unnamed_1.avif 1242w" alt="" src="images/unnamed_1.avif" loading="lazy" class="layout487_image image1"><img data-w-id="286e2206-f72c-f155-ab3b-dfd3aebba199" sizes="(max-width: 1242px) 100vw, 1242px" alt="" src="images/unnamed-2_1.avif" loading="lazy" srcset="images/unnamed-2_1unnamed-2.avif 500w, images/unnamed-2_1.avif 1242w" class="layout487_image image2"><img data-w-id="286e2206-f72c-f155-ab3b-dfd3aebba19a" sizes="(max-width: 1242px) 100vw, 1242px" alt="" src="images/unnamed-3_1.avif" loading="lazy" srcset="images/unnamed-3_1unnamed-3.avif 500w, images/unnamed-3_1.avif 1242w" class="layout487_image image3"><img data-w-id="286e2206-f72c-f155-ab3b-dfd3aebba19b" sizes="(max-width: 1242px) 100vw, 1242px" alt="" src="images/unnamed-4_1.avif" loading="lazy" srcset="images/unnamed-4_1unnamed-4.avif 500w, images/unnamed-4_1.avif 1242w" class="layout487_image image4"></div>
+                  <div class="layout487_image-inner"><img sizes="100vw" srcset="images/unnamed_1unnamed.avif 500w, images/unnamed_1.avif 1242w" alt="" src="images/unnamed_1.avif" loading="lazy" class="layout487_image image1"><img data-w-id="286e2206-f72c-f155-ab3b-dfd3aebba199" sizes="100vw" alt="" src="images/unnamed-2_1.avif" loading="lazy" srcset="images/unnamed-2_1unnamed-2.avif 500w, images/unnamed-2_1.avif 1242w" class="layout487_image image2"><img data-w-id="286e2206-f72c-f155-ab3b-dfd3aebba19a" sizes="100vw" alt="" src="images/unnamed-3_1.avif" loading="lazy" srcset="images/unnamed-3_1unnamed-3.avif 500w, images/unnamed-3_1.avif 1242w" class="layout487_image image3"><img data-w-id="286e2206-f72c-f155-ab3b-dfd3aebba19b" sizes="100vw" alt="" src="images/unnamed-4_1.avif" loading="lazy" srcset="images/unnamed-4_1unnamed-4.avif 500w, images/unnamed-4_1.avif 1242w" class="layout487_image image4"></div>
                 </div>
                 <div class="layout487_content-right">
                   <div data-w-id="286e2206-f72c-f155-ab3b-dfd3aebba19d" class="layout487_item">
@@ -1084,7 +1084,7 @@ margin: 0rem !important;
                   <div class="layout487_slide w-slide">
                     <div class="layout487_item">
                       <div class="layout487_item-content is-green">
-                        <div class="layout487_mobile-image-wrapper"><img sizes="(max-width: 1728px) 100vw, 1728px" srcset="images/frames-sparky0505_1frames-sparky0505.avif 500w, images/frames-sparky0505_1frames-sparky0505.avif 800w, images/frames-sparky0505_1.avif 1728w" alt="" src="images/frames-sparky0505_1.avif" loading="lazy" class="layout487_mobile-image"></div>
+                        <div class="layout487_mobile-image-wrapper"><img sizes="100vw" srcset="images/frames-sparky0505_1frames-sparky0505.avif 500w, images/frames-sparky0505_1frames-sparky0505.avif 800w, images/frames-sparky0505_1.avif 1728w" alt="" src="images/frames-sparky0505_1.avif" loading="lazy" class="layout487_mobile-image"></div>
                         <div class="layout487_item-content-mobile">
                           <h3 class="heading-style-h4">Love Within Reach</h3>
                           <div class="spacer-medium"></div>
@@ -1143,7 +1143,7 @@ margin: 0rem !important;
                   <div class="layout487_slide w-slide">
                     <div data-w-id="b8cd7f4b-2ff0-16d8-f605-49e024cbe112" class="layout487_item">
                       <div class="layout487_item-content is-red">
-                        <div class="layout487_mobile-image-wrapper"><img sizes="(max-width: 1728px) 100vw, 1728px" srcset="images/frames-sparky0404_1frames-sparky0404.avif 500w, images/frames-sparky0404_1frames-sparky0404.avif 800w, images/frames-sparky0404_1.avif 1728w" alt="" src="images/frames-sparky0404_1.avif" loading="lazy" class="layout487_mobile-image"></div>
+                        <div class="layout487_mobile-image-wrapper"><img sizes="100vw" srcset="images/frames-sparky0404_1frames-sparky0404.avif 500w, images/frames-sparky0404_1frames-sparky0404.avif 800w, images/frames-sparky0404_1.avif 1728w" alt="" src="images/frames-sparky0404_1.avif" loading="lazy" class="layout487_mobile-image"></div>
                         <div class="layout487_item-content-mobile">
                           <h3 class="heading-style-h4">Global Connections</h3>
                           <div class="spacer-medium"></div>
@@ -1202,7 +1202,7 @@ margin: 0rem !important;
                   <div class="layout487_slide w-slide">
                     <div data-w-id="a0ccef6c-83d8-8f2c-01e1-aba662355bd6" class="layout487_item">
                       <div class="layout487_item-content is-blue">
-                        <div class="layout487_mobile-image-wrapper"><img sizes="(max-width: 1728px) 100vw, 1728px" srcset="images/frames-sparky0202_1frames-sparky0202.avif 500w, images/frames-sparky0202_1frames-sparky0202.avif 800w, images/frames-sparky0202_1.avif 1728w" alt="" src="images/frames-sparky0202_1.avif" loading="lazy" class="layout487_mobile-image"></div>
+                        <div class="layout487_mobile-image-wrapper"><img sizes="100vw" srcset="images/frames-sparky0202_1frames-sparky0202.avif 500w, images/frames-sparky0202_1frames-sparky0202.avif 800w, images/frames-sparky0202_1.avif 1728w" alt="" src="images/frames-sparky0202_1.avif" loading="lazy" class="layout487_mobile-image"></div>
                         <div class="layout487_item-content-mobile">
                           <h3 class="heading-style-h4">Quality Matches Guaranteed</h3>
                           <div class="spacer-medium"></div>
@@ -1261,7 +1261,7 @@ margin: 0rem !important;
                   <div class="layout487_slide w-slide">
                     <div data-w-id="3f434611-3320-9b55-bd1c-0dd7585949c4" class="layout487_item">
                       <div class="layout487_item-content is-yellow">
-                        <div class="layout487_mobile-image-wrapper"><img sizes="(max-width: 1728px) 100vw, 1728px" srcset="images/frames-sparky0101_1frames-sparky0101.avif 500w, images/frames-sparky0101_1frames-sparky0101.avif 800w, images/frames-sparky0101_1.avif 1728w" alt="" src="images/frames-sparky0101_1.avif" loading="lazy" class="layout487_mobile-image"></div>
+                        <div class="layout487_mobile-image-wrapper"><img sizes="100vw" srcset="images/frames-sparky0101_1frames-sparky0101.avif 500w, images/frames-sparky0101_1frames-sparky0101.avif 800w, images/frames-sparky0101_1.avif 1728w" alt="" src="images/frames-sparky0101_1.avif" loading="lazy" class="layout487_mobile-image"></div>
                         <div class="layout487_item-content-mobile">
                           <h3 class="heading-style-h4">Diverse Social Opportunities</h3>
                           <div class="spacer-medium"></div>
@@ -1672,7 +1672,7 @@ margin: 0rem !important;
               <div class="spacer-xxlarge"></div>
               <div style="-webkit-transform:translate3d(0, 4rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 4rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 4rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 4rem, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="layout495_grid">
                 <div class="layout495_tab-link">
-                  <div class="layout495_image-wrapper"><img sizes="(max-width: 1728px) 100vw, 1728px" srcset="images/rectangleframes-sparky020202_1rectangleframes-sparky020202.avif 500w, images/rectangleframes-sparky020202_1rectangleframes-sparky020202.avif 800w, images/rectangleframes-sparky020202_1.avif 1728w" alt="" src="images/rectangleframes-sparky020202_1.avif" loading="lazy" class="layout495_image"></div>
+                  <div class="layout495_image-wrapper"><img sizes="100vw" srcset="images/rectangleframes-sparky020202_1rectangleframes-sparky020202.avif 500w, images/rectangleframes-sparky020202_1rectangleframes-sparky020202.avif 800w, images/rectangleframes-sparky020202_1.avif 1728w" alt="" src="images/rectangleframes-sparky020202_1.avif" loading="lazy" class="layout495_image"></div>
                   <div class="layout495_tab-title">
                     <h3 class="heading-style-h4">唱歌 🎤</h3>
                     <div class="layout495_paragraph">
@@ -1682,7 +1682,7 @@ margin: 0rem !important;
                   </div>
                 </div>
                 <div class="layout495_tab-link">
-                  <div class="layout495_image-wrapper"><img sizes="(max-width: 1728px) 100vw, 1728px" srcset="images/rectangleframes-sparky050505_1rectangleframes-sparky050505.avif 500w, images/rectangleframes-sparky050505_1rectangleframes-sparky050505.avif 800w, images/rectangleframes-sparky050505_1.avif 1728w" alt="" src="images/rectangleframes-sparky050505_1.avif" loading="lazy" class="layout495_image"></div>
+                  <div class="layout495_image-wrapper"><img sizes="100vw" srcset="images/rectangleframes-sparky050505_1rectangleframes-sparky050505.avif 500w, images/rectangleframes-sparky050505_1rectangleframes-sparky050505.avif 800w, images/rectangleframes-sparky050505_1.avif 1728w" alt="" src="images/rectangleframes-sparky050505_1.avif" loading="lazy" class="layout495_image"></div>
                   <div class="layout495_tab-title">
                     <h3 class="heading-style-h4">旅行 ✈️</h3>
                     <div class="layout495_paragraph">
@@ -1692,7 +1692,7 @@ margin: 0rem !important;
                   </div>
                 </div>
                 <div class="layout495_tab-link">
-                  <div class="layout495_image-wrapper"><img sizes="(max-width: 1728px) 100vw, 1728px" srcset="images/rectangleframes-sparky010101_1rectangleframes-sparky010101.avif 500w, images/rectangleframes-sparky010101_1rectangleframes-sparky010101.avif 800w, images/rectangleframes-sparky010101_1.avif 1728w" alt="" src="images/rectangleframes-sparky010101_1.avif" loading="lazy" class="layout495_image"></div>
+                  <div class="layout495_image-wrapper"><img sizes="100vw" srcset="images/rectangleframes-sparky010101_1rectangleframes-sparky010101.avif 500w, images/rectangleframes-sparky010101_1rectangleframes-sparky010101.avif 800w, images/rectangleframes-sparky010101_1.avif 1728w" alt="" src="images/rectangleframes-sparky010101_1.avif" loading="lazy" class="layout495_image"></div>
                   <div class="layout495_tab-title">
                     <h3 class="heading-style-h4">健身 💪</h3>
                     <div class="layout495_paragraph">
@@ -1702,7 +1702,7 @@ margin: 0rem !important;
                   </div>
                 </div>
                 <div class="layout495_tab-link">
-                  <div class="layout495_image-wrapper"><img sizes="(max-width: 1728px) 100vw, 1728px" srcset="images/rectangleframes-sparky040404_1rectangleframes-sparky040404.avif 500w, images/rectangleframes-sparky040404_1rectangleframes-sparky040404.avif 800w, images/rectangleframes-sparky040404_1.avif 1728w" alt="" src="images/rectangleframes-sparky040404_1.avif" loading="lazy" class="layout495_image"></div>
+                  <div class="layout495_image-wrapper"><img sizes="100vw" srcset="images/rectangleframes-sparky040404_1rectangleframes-sparky040404.avif 500w, images/rectangleframes-sparky040404_1rectangleframes-sparky040404.avif 800w, images/rectangleframes-sparky040404_1.avif 1728w" alt="" src="images/rectangleframes-sparky040404_1.avif" loading="lazy" class="layout495_image"></div>
                   <div class="layout495_tab-title">
                     <h3 class="heading-style-h4">飲食 🍽️</h3>
                     <div class="layout495_paragraph">
@@ -1987,8 +1987,8 @@ margin: 0rem !important;
               <div class="cta51_circle is-2"></div>
             </div>
           </div>
-          <div class="story_headshot-group"><img sizes="(max-width: 1001px) 100vw, 1001px" srcset="images/portrait-young-asian-couple-sitting-living-room-home_1portrait-young-asian-couple-sitting-living-room-home.avif 500w, images/portrait-young-asian-couple-sitting-living-room-home_1.avif 1001w" alt="" src="images/portrait-young-asian-couple-sitting-living-room-home_1.avif" loading="lazy" class="story_headshot-image is-overlap"></div>
-          <div class="story_headshot-group is-left"><img sizes="(max-width: 1001px) 100vw, 1001px" srcset="images/happy-young-couple-with-red-paper-hearts-light-background_1happy-young-couple-with-red-paper-hearts-light-background.avif 500w, images/happy-young-couple-with-red-paper-hearts-light-background_1.avif 1001w" alt="" src="images/happy-young-couple-with-red-paper-hearts-light-background_1.avif" loading="lazy" class="story_headshot-image"></div>
+          <div class="story_headshot-group"><img sizes="100vw" srcset="images/portrait-young-asian-couple-sitting-living-room-home_1portrait-young-asian-couple-sitting-living-room-home.avif 500w, images/portrait-young-asian-couple-sitting-living-room-home_1.avif 1001w" alt="" src="images/portrait-young-asian-couple-sitting-living-room-home_1.avif" loading="lazy" class="story_headshot-image is-overlap"></div>
+          <div class="story_headshot-group is-left"><img sizes="100vw" srcset="images/happy-young-couple-with-red-paper-hearts-light-background_1happy-young-couple-with-red-paper-hearts-light-background.avif 500w, images/happy-young-couple-with-red-paper-hearts-light-background_1.avif 1001w" alt="" src="images/happy-young-couple-with-red-paper-hearts-light-background_1.avif" loading="lazy" class="story_headshot-image"></div>
         </div>
       </section>
     </main>
