--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 13:49:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 13:51:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67ceeb7cb35863f50184f9a7" data-wf-site="66b30968ebcbac87918c270a">
 <head>
   <meta charset="utf-8">
@@ -344,7 +344,7 @@ margin: 0rem !important;
           </div>
         </div>
         <nav role="navigation" class="navbar3_menu w-nav-menu">
-          <a href="index.html" class="navbar3_logo-link-menu w-nav-brand"><img src="images/sparkyl.avif" loading="eager" sizes="(max-width: 1944px) 100vw, 1944px" srcset="images/sparkyl-p-500.png 500w, images/sparkyl-p-800.png 800w, images/sparkyl.avif 1944w" alt="" class="navbar3_logo"></a>
+          <a href="index.html" class="navbar3_logo-link-menu w-nav-brand"><img src="images/sparkyl.avif" loading="eager" sizes="100vw" srcset="images/sparkyl-p-500.png 500w, images/sparkyl-p-800.png 800w, images/sparkyl.avif 1944w" alt="" class="navbar3_logo"></a>
           <a href="index.html" class="navbar3_link w-nav-link">app功能</a>
           <a href="#" class="navbar3_link w-nav-link">用戶評價</a>
           <a href="#" class="navbar3_link w-nav-link">探索用戶</a>
@@ -353,7 +353,7 @@ margin: 0rem !important;
             <a href="#" class="button is-small is-nav w-button">立即下載</a>
           </div>
         </nav>
-        <a href="#" class="navbar3_logo-link w-nav-brand"><img src="images/sparkyl.avif" loading="lazy" alt="" class="navbar3_logo"></a>
+        <a href="index.html" class="navbar3_logo-link w-nav-brand"><img src="images/sparkyl.avif" loading="lazy" alt="" class="navbar3_logo"></a>
         <div class="navbar3_menu-background"></div>
         <div id="w-node-_624c3845-24c6-eace-07dd-cc9b843387c6-843387af" class="button-group is-center">
           <a href="#" class="button is-small hide-mobile-portrait w-button">立即下載</a>
